# aws-lambda-playground

./: pyproject.toml  samconfig.toml  template.yaml  workflow-linear.asl.json  workflow-map.asl.json  workflow-parallel.asl.json
.aws-sam/: build.toml
app/: linear.py  map.py  parallel.py
